  better (contributed by David Firth).
- polr() handles a rank-deficient model matrix.
- polr() now returns the method used, and uses it for predictions.
- anova() method for polr (contributed by John Fox).
- predict.glmmPQL was not using the na.action in the object as intended.
- The default methods for addterm and dropterm and anova.polr now check
  for changes in the number of cases in use caused e.g. by na.action=na.omit.
- Added vcov() method for rlm fits.
- eqscplot() accepts reversed values for xlim and ylim.
- Script ch10.R uses se.contrast to calculate se's missing from model.tables.
- profile() and confint() methods for polr().
- glm.convert() was not setting the `offset' component that R's glm objects 
  have.
- sammon() now checks for duplicates in the initial configuration.
- isoMDS() and sammon() work around dropping of names.dist in 2.1.0
- lda() now gives an explicit error message if all group means are the same.
- fitdistr() now has a logLik() method, chooses the optim() method if not
  supplied, handles the log-normal by closed-form and no longer attempts to
  handle the uniform.
- glm.nb() now accepts 'mustart'.
- glm.nb() now supports weights: they used to be ignored when estimating 
  theta.
- fitdistr() now supports geometric and Poisson distributions, and 
  uses closed-form results for the exponential.
- lm.ridge, lqs and rlm allow offset() terms.
- the 'prior' argument of predict.qda is now operational.
- script ch12.R now has b1() adapted for R's contour().
- anova.polr() quoted model dfs, not residual dfs.
- stepAIC() applied to a polr fit now gets the correct rdf's in the
  anova table.
- lm.gls() now returns fitted values and residuals on the original
  coordinates (not the uncorrelated ones).
- parcoord() now allows missing values and has a new argument
  'var.label' to label the variable axes.  (Contributed by Fabian Scheipl.)
- rlm() has a 'lqs.control' argument passed to lqs() where used for
  initialization.